0.03
 - Improve SEE ALSO section in doc.
 - Update Module::Install to 1.16 version.

0.02 2015-03-22T01:14:29+01:00
 - Fix dependencies for PYX::Parser.

0.01 2015-03-20T19:05:32+01:00
 - First version.