@@ -9,8 +9,6 @@ build_requires:
   Test::More: 0
   Test::NoWarnings: 0
   Test::Output: '1.02'
-  Test::Pod: 0
-  Test::Pod::Coverage: 0
 configure_requires:
   ExtUtils::MakeMaker: 6.36
 distribution_type: module
@@ -26,6 +24,7 @@ no_index:
     - examples
     - inc
     - t
+    - xt
 requires:
   Class::Utils: 0.05
   PYX::Parser: 0.03
