@@ -1,5 +1,6 @@
 0.03
  - Improve SEE ALSO section in doc.
+ - Move author tests to xt/ directory.
  - Update Module::Install to 1.16 version.
 
 0.02 2015-03-22T01:14:29+01:00
